# libmagicrf

./: pyproject.toml  setup.py
magicrf/: __init__.py  case1.py  case2.py
magicrf_pve.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: _m100.c
