[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
[project]
name = "magicrf_pve"
version = "1.2"
authors = [
  { name="Peter van Es", email="peter.van.es@easylogic.nl" },
]
description = "Library for UHF RFID Soc Reader Chip M100 and QM100"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/vanesp/libmagicrf.git"
Issues = "https://github.com/vanesp/libmagicrf/issues"